--- a/package.json
+++ b/package.json
@@ -2,7 +2,10 @@
   "name": "@org/source",
   "version": "0.0.0",
   "license": "MIT",
-  "scripts": {},
+  "scripts": {
+    "nx": "nx",
+    "dev": "nx run-many -t serve"
+  },
   "private": true,
   "devDependencies": {
     "@nestjs/schematics": "^10.0.1",
