--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "license": "MIT",
   "scripts": {
     "nx": "nx",
-    "dev": "nx run-many -t serve"
+    "dev": "nx run-many -t serve",
+    "dev:web": "nx serve web"
   },
   "private": true,
   "devDependencies": {
